--- a/client/src/components/Mapbox/index.css
+++ b/client/src/components/Mapbox/index.css
@@ -1,6 +1,8 @@
 .leaflet-container {
+  width: 80%;
   height: 50vh;
   padding: 5px;
   border: 1px solid #ccc;
-  margin: 2px;
+  margin: auto;
+  display: block;
 }
