--- a/client/src/components/Mapbox/index.css
+++ b/client/src/components/Mapbox/index.css
@@ -1,7 +1,6 @@
 .leaflet-container {
   width: 100%;
-  height: 78vh;
-  padding: 5px;
-  border: 1px solid #ccc;
-  margin: auto;
+  height: 70vh;
+  padding-bottom: 5em;
+  margin-bottom: 3em;
 }
