--- a/client/src/components/Mapbox/index.css
+++ b/client/src/components/Mapbox/index.css
@@ -1,6 +1,13 @@
 .leaflet-container {
   width: 100%;
   height: 70vh;
-  padding-bottom: 5em;
   margin-bottom: 3em;
+  padding-left: 2em;
+  padding-right: 2em;
+  padding-bottom: 5em;
+}
+
+.leaflet-popup.custom-popup {
+  width: 300px;
+  height: 200px;
 }
