--- a/client/src/components/Mapbox/index.css
+++ b/client/src/components/Mapbox/index.css
@@ -1,9 +1,9 @@
 .leaflet-container {
   width: 100%;
   height: 70vh;
-  margin-bottom: 3em;
-  padding-left: 2em;
-  padding-right: 2em;
+  margin-bottom: 2em;
+  margin-right: 2em;
+  border: 1px solid #ddd;
   padding-bottom: 5em;
 }
 
